Update author meta tag in index.html

--- a/cursor-clone-project-chaicode/index.html
+++ b/cursor-clone-project-chaicode/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Cursor-inspired AI coding assistant landing page for faster and smarter development."
     />
-    <meta name="author" content="Shubham Kumar" />
+    <meta name="author" content="karan" />
     <link rel="icon" type="image/x-icon" href="/assets/Icon.png" />
     <title>Dev Tool Landing Page - Cursor</title>
     <link rel="stylesheet" href="style.css" />
