Update image paths to relative URLs

--- a/cursor-clone-project-chaicode/index.html
+++ b/cursor-clone-project-chaicode/index.html
@@ -57,11 +57,11 @@
       <section class="images">
         <img
           class="image1"
-          src="/assets/AgentScreenshot1.png"
+          src="./assets/AgentScreenshot1.png"
           alt="Background Image"
         />
-        <img class="image2" src="/assets/AgentScreenshot2.png" alt="" />
-        <img class="image3" src="/assets/AgentScreenshot3.png" alt="" />
+        <img class="image2" src="./assets/AgentScreenshot2.png" alt="" />
+        <img class="image3" src="./assets/AgentScreenshot3.png" alt="" />
       </section>
 
       <!-- ================= Partners Section Start ================= -->
@@ -90,15 +90,15 @@
           <a href="#">Learn about Agent →</a>
         </div>
         <div class="images">
-          <img class="image1" src="/assets/image1.png" alt="" />
-          <img class="image2" src="/assets/image1.1.png" alt="" />
+          <img class="image1" src="./assets/image1.png" alt="" />
+          <img class="image2" src="./assets/image1.1.png" alt="" />
         </div>
       </section>
 
       <!-- ================= Section 2 Start ================= -->
       <section class="sections">
         <div class="images">
-          <img class="image1" src="/assets/image2.png" alt="" />
+          <img class="image1" src="./assets/image2.png" alt="" />
         </div>
         <div class="content">
           <h2>Magically accurate autocomplete</h2>
@@ -121,8 +121,8 @@
           <a href="#">Learn about Cursor's ecosystem →</a>
         </div>
         <div class="images">
-          <img class="image1" src="/assets/image3.png" alt="" />
-          <img class="image2" src="/assets/image3.1.png" alt="" />
+          <img class="image1" src="./assets/image3.png" alt="" />
+          <img class="image2" src="./assets/image3.1.png" alt="" />
           <img
             class="image3"
             src="/assets/image3.2.png"
@@ -142,7 +142,7 @@
             best builders were using Cursor.
           </p>
           <div class="user">
-            <img src="/assets/diana-hu-avatar.webp" alt="" />
+            <img src="./assets/diana-hu-avatar.webp" alt="" />
             <div>
               <label for="">Diana Hu</label>
               <br />
@@ -158,7 +158,7 @@
             bring-your-own-model... everything is well put together.
           </p>
           <div class="user">
-            <img src="/assets/shadcn-avatar.webp" alt="" />
+            <img src="./assets/shadcn-avatar.webp" alt="" />
             <div>
               <label for="">shadcn</label>
               <br />
@@ -174,7 +174,7 @@
             full autonomy agentic version.
           </p>
           <div class="user">
-            <img src="/assets/andrej-karpathy-avatar.webp" alt="" />
+            <img src="./assets/andrej-karpathy-avatar.webp" alt="" />
             <div>
               <label for="">Andrej Karpathy</label>
               <br />
@@ -191,7 +191,7 @@
             productive.
           </p>
           <div class="user">
-            <img src="/assets/patrick-collison-avatar.webp" alt="" />
+            <img src="./assets/patrick-collison-avatar.webp" alt="" />
             <div>
               <label for="">Patrick Collison</label>
               <br />
@@ -205,7 +205,7 @@
             wild.
           </p>
           <div class="user">
-            <img src="/assets/theprimeagen-avatar.webp" alt="" />
+            <img src="./assets/theprimeagen-avatar.webp" alt="" />
             <div>
               <label for="">ThePrimeagen</label>
               <br />
@@ -221,7 +221,7 @@
             experiences like Cursor where models like GPT-5 shine brightest.
           </p>
           <div class="user">
-            <img src="/assets/greg-brockman-avatar.webp" alt="" />
+            <img src="./assets/greg-brockman-avatar.webp" alt="" />
             <div>
               <label for="">Greg Brockman</label>
               <br />
@@ -242,7 +242,7 @@
               Gemini, and xAI.
             </p>
             <a href="#">Explore models →</a>
-            <img src="/assets/UserScreenshot1.png" alt="" />
+            <img src="./assets/UserScreenshot1.png" alt="" />
           </div>
           <div class="card">
             <label for="">Complete codebase understanding</label>
@@ -251,7 +251,7 @@
               complexity.
             </p>
             <a href="#">Learn about semantic search →</a>
-            <img src="/assets/UserScreenshot2.png" alt="" />
+            <img src="./assets/UserScreenshot2.png" alt="" />
           </div>
           <div class="card">
             <label for="">Develop enduring software</label>
@@ -260,7 +260,7 @@
               securely and at scale.
             </p>
             <a href="">Explore enterprise →</a>
-            <img src="/assets/UserScreenshot3.png" alt="" />
+            <img src="./assets/UserScreenshot3.png" alt="" />
           </div>
         </div>
       </section>
@@ -301,7 +301,7 @@
           <a href="#">Join us  →</a>
         </div>
 
-        <img src="/assets/homepage-team-photo.webp" alt="" />
+        <img src="./assets/homepage-team-photo.webp" alt="" />
       </section>
 
       <!-- ================= Blog Section Start ================= -->
